Fix alignment

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -266,3 +266,8 @@ a:active {text-decoration: none}	/* 选定的链接 */
         font-size: 36px;
     }
 }
+
+.gsc-selected-option-container{
+    max-width : 100% !important;
+}
+
